# intrascribe

./: .gitignore  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json  run.sh  start-dev.sh
backend/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  SERVICE_UPDATES.md  ai_config.yaml  build-docker.sh  config.yaml  docker-compose.prod.yml  docker-compose.yml  docker-daemon.json  main_v1.py  pyproject.toml  start-all.sh  start_agent.py
backend/agent_service/transcribe_agent/: Dockerfile  __init__.py  agent.py  pyproject.toml  requirements.txt
backend/api_service/: Dockerfile  __init__.py  main.py  pyproject.toml  requirements.txt  schemas.py
backend/api_service/clients/: __init__.py  microservice_clients.py
backend/api_service/core/: __init__.py  auth.py  database.py  redis.py
backend/api_service/repositories/: __init__.py  session_repository.py  user_repository.py
backend/api_service/routers/: __init__.py  ai_services.py  ai_sessions.py  audio.py  livekit.py  realtime.py  sessions.py  sessions_v2.py  tasks_v2.py  templates.py  transcriptions.py  users.py
backend/api_service/services/: __init__.py  ai_service.py
backend/app/: __init__.py  ai_summary.py  api.py  audio_converter.py  audio_processing_service.py  batch_transcription.py  clients.py  config.py  dependencies.py  livekit_agent_session.py  livekit_connection.py  models.py  repositories.py  schemas.py  services.py  speaker_diarization.py  stt_adapter.py
backend/diarization_service/: Dockerfile  __init__.py  main.py  models.py  pyproject.toml  requirements.txt
backend/shared/: __init__.py  config.py  logging.py  models.py  utils.py
backend/stt_service/: Dockerfile  __init__.py  main.py  models.py  pyproject.toml  requirements.txt
doc/: api_design_v2.md  architecture-design.md
supabase/: config.toml  database_schema.sql
supabase/migrations/: 20250814090000_all_in_one.sql
web/: .dockerignore  .env.local.example  .eslintrc.json  Dockerfile  WEB_API_ADAPTATION_SUMMARY.md  next-health.js  next.config.js  package-lock.json  package.json  tailwind.config.js
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/generate-title/: route.ts
web/app/api/sessions/[id]/rename-speaker/: route.ts
web/app/api/summarize/: route.ts
web/app/auth/: page.tsx
web/app/auth/callback/: page.tsx
web/components/: ai-summary-panel.tsx  audio-player.tsx  direct-livekit-recorder.tsx  error-boundary.tsx  file-list.tsx  header.tsx  recorder.tsx  sidebar.tsx  task-status-display.tsx  template-manager.tsx  template-selector.tsx  transcript-view.tsx
web/components/auth/: forgot-password-form.tsx  login-form.tsx  register-form.tsx  social-login-buttons.tsx
web/components/ui/: card.tsx  input.tsx  progress.tsx  textarea.tsx
web/hooks/: useAuth.tsx  useDirectLiveKit.ts  useRecordingSessions.ts
web/lib/: api-client.ts  api-server-client.ts  api-types.ts  supabase-client.ts  supabase.ts
web/lib/__tests__/: api-response-formats.test.ts
web/lib/supabase/: server.ts
