[project]
name = "intrascribe-backend"
version = "0.1.0"
description = "intrascribe Backend Service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio",
    "fastapi",
    "numpy",
    "python-dotenv",
    "uvicorn",
    "pydantic",
    "pydantic-settings",
    "supabase>=2.0.0",
    "torch",
    "torchaudio",
    "transformers",
    "openai-whisper",
    "litellm",

    "librosa",
    "PyYAML",
    "fastrtc[stt,vad]>=0.0.25",
    "funasr>=1.2.6",
    "pyannote-audio>=3.3.2",
]
