[project]
name = "stt-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.1",
    "funasr>=1.2.6",
    "gunicorn>=21.2.0",
    "httpx>=0.25.2",
    "librosa>=0.10.1",
    "numpy>=1.24.3",
    "pydantic>=2.5.0",
    "pydantic-settings==2.1.0",
    "python-multipart>=0.0.6",
    "pyyaml>=6.0.1",
    "soundfile>=0.12.1",
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    "transformers>=4.36.0",
    "datasets>=2.14.0",
    "accelerate>=0.24.0",
    "uvicorn[standard]>=0.24.0",
]
